shop.css
/* body */
body {
    font-family: "Press Start 2P", system-ui;
    height: 100vh; 
    display: flex; 
    margin: 0;
    padding-top: 8vw; 
    background-color: #ECCAE7;
}

/* shop-screen */
#shop-screen {
    display: flex;
    flex-direction: row;
}

@media (max-width: 900px) {
    #shop-screen {
        display: flex;
        flex-direction: column;
        column-gap: 30px;
        align-items: center;
    }
    body {
        font-family: "Press Start 2P", system-ui;
        height: 100vh; 
        display: flex; 
        margin: 0;
        padding-top: 12vh; 
        background-color: #ECCAE7;
    }
}

/* side-bar */
.side-bar {
    display: flex;
    flex-direction: column;
    margin: 3vw;
    gap: 20px;
}

/* feed-me gif */
.feed-me {
    display: flex;
    flex-direction: column;
    align-items: center;  
    justify-content: center; 
    width: 100%; 
    margin: auto; 
    gap: 20px;

}

.feed-me img {
    display: block; 
    border-radius: 14px;
    width: clamp(100px, 50vw, 230px);   
    height: auto;
}

.feed {
    background-color: #ffffff;
    color:#1B0A0A; 
    text-align: center;
    font-family: "Press Start 2P", sans-serif; 
    font-size: 14px;
    border: none;
    padding: 14px 24px;
    border-radius: 15px; 
    cursor: pointer; 
    transition: 0.3s ease-in-out;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    border: #1B0A0A solid 4px;
    margin-bottom: 20px;
}

.feed:hover {
    transform: scale(1.05); 
}

.feed:active {
    transform: scale(0.95);
}

/* filter menu */
.filter-menu {
    width: 270px; 
    padding: 10px;
    background-color: #331212;
    border: 6px solid #1B0A0A;
    border-radius: 20px;
    position: static;
    left: 20px;
    max-height: 80vh;
    min-height: 35vh;
    overflow-y: auto; 
    box-sizing: border-box;
}

.filter-menu .header {
    background-color: #fff;
    color: #1B0A0A;
    font-weight: bold;
    height: 40px;
    width: 205px;
    align-self: center;
    text-align: center;
    border-radius: 30px;
    border: #1B0A0A 5px solid;
    margin-bottom: 10px;
}

/* scrollbar */
.filter-menu::-webkit-scrollbar {
    width: 20px; 
}

/* scrollbar track */
.filter-menu::-webkit-scrollbar-track {
    background-color: #ffffff;
    border-radius: 50px;
    padding: 3px; 
    box-sizing: border-box; 
    margin: 10px;
    border: #1B0A0A 3px solid;
}

/* scrollbar thumb */
.filter-menu::-webkit-scrollbar-thumb {
    background-color:#934488;
    border-radius: 10px;
    width: 14px; 
    margin: 5px; 
    border: #1B0A0A 3px solid;
}

/* filter container */
.filter-container {
    background-color: #fff;
    width: 205px;
    border-radius: 20px;
    border: #1B0A0A solid 5px;
    height: fit-content;
    font-size: 10px;
    text-align: left;
    align-self: center;
}

/* filter items */
.filter-item {
    margin: 20px;
}

.filter-item summary {
    font-weight: bold;
    color: #331212;
    cursor: pointer;
    padding: 8px;
    border-radius: 5px;
    display: flex;
    align-items: center;
    position: relative;
}

.filter-item summary::after {
    content: '';
    position: absolute;
    right: 5px;
    width: 10px;
    height: 8px;
    background-image: url('https://raveenakumar1.github.io/raveena/images/logo.png'); 
    background-size: cover;
    transition: transform 0.3s ease-in-out;
}

.filter-item[open] summary::after {
    transform: rotate(180deg); 
}

.filter-item label {
    display: block;
    font-weight: bold;
    padding: 5px 0;
    color:#934488;
    font-size: 8px;
}


/* navigation bar */
.not-off-screen-menu {
    background-color: #331212;
    padding: 0px 5vw;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    position: fixed;
    box-sizing: border-box;
    height: 12.5vh;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1000;
    border-bottom: #753d6e solid 5px;
}

.not-off-screen-menu .desktop-nav {
    list-style: none;
    display: flex;
    gap: 2vw;
    margin: 20px 0;
}

.not-off-screen-menu .desktop-nav li {
    margin-left: 1vw;
}

.not-off-screen-menu .desktop-nav li a {
    text-decoration: none;
    color: white;
    background-color: #CE64C0;
    border-radius: 30px;
    border: 3px solid #fff;
    font-weight: bold;
    font-size: clamp(12px, 2vw, 14px);
    padding: 1vw 1.5vw;
    transition: 0.3s;
}

.not-off-screen-menu .desktop-nav li a:hover {
    background-color: #934488;
}

/* mobile menu */
.off-screen-menu {
    background-color: #331212;
    border-left: #753d6e solid 5px;
    height: 100vh;
    width: 100%;
    max-width: 300px;
    position: fixed;
    top: 0;
    right: -100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: 3rem;
    transition: .3s ease;
    z-index: 1020;
}

.off-screen-menu ul {
    list-style-type: none;
    gap: 20px;
    margin: 0
}

.off-screen-menu ul li a {
    text-decoration: none;
    color: white;
    background-color: #CE64C0;
    border-radius: 30px;
    border: 3px solid #fff;
    font-weight: bold;
    font-style: normal;
    font-size: clamp(10px, 1.5vw, 14px);
    padding: 1vw 1.5vw;
    transition: 0.3s;
}

.off-screen-menu ul li a:hover {
    background-color:#934488;
    border-radius: 30px;
    border: 3px solid #fff;
}

.off-screen-menu.active {
    right: 0;
}


.hamburger {
    height: 50px;
    width: 50px;
    position: relative;
    cursor: pointer;
    display: none; 
    z-index: 1030;
}

.hamburger span {
    height: 1.5vh;
    width: 100%;
    background-color: #934488;
    border-radius: 25px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    transition: .3s ease;
}

.hamburger span:nth-child(1){
    top: 25%;
}

.hamburger span:nth-child(3){
    top: 75%;
}

.hamburger.active span:nth-child(1){
    top: 50%;
    transform: translate(-50%, -50%) rotate(45deg);
}

.hamburger.active span:nth-child(2){
    opacity: 0;
}

.hamburger.active span:nth-child(3){
    top: 50%;
    transform: translate(-50%, -50%) rotate(-45deg);
}

@media (max-width: 768px) {
    .not-off-screen-menu .desktop-nav {
        display: none;
    }
    .hamburger {
        display: block;
    }
}

@media (min-width: 769px) {
    .off-screen-menu {
        display: none;
    }
}


/* loading screen styling */
#loading-screen {
    position: fixed;
    inset: 0;
    width: 100vw; 
    height: 100dvh; 
    background: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    z-index: 99999; 
}

/* loading image */
.loading-image {
    width: 191px;
    height: 162px; 

}

/* loading bar container */
.loading-bar-cont {
    width: 50%;
    max-width: 348px;
    height: 36px;
    background: #fff;
    border-radius: 45px;
    border: #934488 solid 5px;
    margin-top: 20px;
    overflow: hidden;
}

/* animated loading bar */
.loading-bar {
    width: 0%;
    height: 100%;
    background-color: #934488;
    animation: loading-animation 2s linear forwards;
}

/* animation keyframes */
@keyframes loading-animation {
    0% { width: 0%; }
    100% { width: 100%; }
}

/* general styling for items */
.shop-items {
    display: flex; 
    flex-wrap: wrap; 
    justify-content: center; 
    align-items: flex-start; 
    gap: 20px; 
    min-height: 80vh;
    background-color: #934488;
    border-radius: 14px;
    border: #1B0A0A 5px solid;
    padding: 20px;
    color: #fff;
    margin-top: 2vw;
    margin-bottom: 2vw;
    margin-right: 2vw;
    margin-left: 2vw;
    overflow-y: auto;
}

.shop-items img {
    width: 240px; 
    height: 200px; 
    object-fit: cover;
    border-radius: 15px; 
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
    transition: transform 0.3s ease-in-out; 
    margin: auto;
    background-color: #fff;
    border: #1B0A0A 5px solid;
}

.shop-items img:hover {
    transform: scale(1.05); 
}


.shop-items p {
    font-size: 10px;
    text-align: center;
}

.shop-items h1 {
    font-size: 15px;
    text-align: center;
}


/* general styling for contents in shop-item */
.shop-item {
    display: flex;
    flex-direction: column;
    align-items: center; /* this CENTERS everything */
    justify-content: center;
    text-align: center;
}

.shop-item button {
    background-color: #ffffff;
    color:#693062; 
    text-align: center;
    font-family: "Press Start 2P", sans-serif; 
    font-size: 10px;
    font-weight: bold;
    padding: 14px 15px;
    border-radius: 15px; 
    cursor: pointer; 
    transition: 0.3s ease-in-out;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    border: #1B0A0A solid 4px;
}

.shop-item button:hover {
    transform: scale(1.05); 
}

.shop-item button:active {
    transform: scale(0.95);
}


/* scrollbar */
.shop-items::-webkit-scrollbar {
    width: 20px; 
}

/* scrollbar track */
.shop-items::-webkit-scrollbar-track {
    background-color:#331212;
    border-radius: 8px;
    padding: 3px; 
    box-sizing: border-box; 
    border: #1B0A0A 3px solid;
}

/* scrollbar thumb */
.shop-items::-webkit-scrollbar-thumb {
    background-color:#ffffff;
    border-radius: 10px;
    width: 15px; 
    margin: 5px; 
    border: #1B0A0A 3px solid;
}

.tbc {
    margin: 100px;
    font-size: 10px;
    padding: 10px 100px;
    text-align: center;
    border-radius: 30px; 
    cursor: pointer; 
    background-color: #1B0A0A;
    color: #fff;
    transition: 0.3s ease-in-out;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    border: #fff solid 5px;
    font-family: "Press Start 2P", sans-serif; 
}

.tbc:hover {
    background-color: #0e0707;
    transform: scale(1.05);
}

